err/redsolutioncms.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redsolutioncms'...
Compiling './lib/python3.5/site-packages/redsolutioncms/ez_setup.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/ez_setup.py", line 106
    except pkg_resources.VersionConflict, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redsolutioncms/home'...
Compiling './lib/python3.5/site-packages/redsolutioncms/home/bootstrap.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/home/bootstrap.py", line 70
    exec urllib2.urlopen('http://python-distribute.org/distribute_setup.py'
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/redsolutioncms/importpath.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/importpath.py", line 17
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/redsolutioncms/loader.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/loader.py", line 82
    print 'Test mode'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redsolutioncms/locale'...
Listing './lib/python3.5/site-packages/redsolutioncms/locale/ru'...
Listing './lib/python3.5/site-packages/redsolutioncms/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/redsolutioncms/management'...
Listing './lib/python3.5/site-packages/redsolutioncms/management/commands'...
Compiling './lib/python3.5/site-packages/redsolutioncms/management/commands/wrap_runserver.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/management/commands/wrap_runserver.py", line 41
    print task.task, 'executing...'
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redsolutioncms/media'...
Listing './lib/python3.5/site-packages/redsolutioncms/media/css'...
Listing './lib/python3.5/site-packages/redsolutioncms/media/img'...
Listing './lib/python3.5/site-packages/redsolutioncms/media/img/admin'...
Listing './lib/python3.5/site-packages/redsolutioncms/media/img/gis'...
Listing './lib/python3.5/site-packages/redsolutioncms/media/js'...
Listing './lib/python3.5/site-packages/redsolutioncms/media/static'...
Compiling './lib/python3.5/site-packages/redsolutioncms/packages.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/packages.py", line 170
    print 'Searching module mptt'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/redsolutioncms/settings.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/settings.py", line 95
    print 'Can not import extrapath_additional!'
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redsolutioncms/templates'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/admin'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/fixtures'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/media'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/media/css'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/media/img'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/media/img/admin'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/media/img/gis'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/templates'...
Listing './lib/python3.5/site-packages/redsolutioncms/templates/redsolutioncms/project/templates/admin'...
Listing './lib/python3.5/site-packages/redsolutioncms/templatetags'...
Compiling './lib/python3.5/site-packages/redsolutioncms/urls.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/urls.py", line 42
    print 'Can not import urls_additional!'
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/redsolutioncms/views.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/views.py", line 110
    except ImportError, error:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/redsolutioncms/xmlrpc_urllib2_transport.py'...
***   File "./lib/python3.5/site-packages/redsolutioncms/xmlrpc_urllib2_transport.py", line 52
    print "body:", repr(response)
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redsolutioncms-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
